working on footer

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -15,11 +15,11 @@ body{
   box-shadow:0 13px 6px -5px #888888;
 }
 aside{
-  position:fixed;
+  position:absolute;
   right:20px;
   top:20px;
 }
-.fa{
+aside > .fa{
   color:#339999;
   font-size:1.3em !important;
 }
