--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,6 +2,9 @@
 body{
   font-family:'Open Sans';
 }
+a{
+  cursor:pointer;
+}
 #navBar{
   border-left:1px solid #888888;
   border-top:1px solid white;
@@ -13,6 +16,16 @@ body{
   -webkit-box-shadow:0 13px 6px -5px #888888;
   -moz-box-shadow:0 13px 6px -5px #888888;
   box-shadow:0 13px 6px -5px #888888;
+  background-color:#339999 !important;
+}
+.nav-item{
+  color:white !important;
+}
+.nav-item:hover{
+  background-color:#40568f;
+}
+.active{
+  text-decoration:underline;
 }
 aside{
   position:absolute;
@@ -42,4 +55,58 @@ aside > .fa{
 #about{
   margin-left:70px;
   margin-top:100px;
+}
+footer{
+  width:100%;
+  height:auto;
+  background-image:url('../images/footer.jpg');
+  background-position:center center;
+  background-repeat:no-repeat;
+  background-size:cover;
+  position:absolute;
+  bottom:0;
+  padding-top:20px;
+  margin-top:0;
+}
+.container{
+  position:relative;
+  z-index:2;
+}
+.container > h5{
+  font-weight:700;
+  font-size:18px;
+  color:#69c;
+}
+address{
+  color:#fff;
+  font-size:14px;
+  line-height:24px;
+}
+.social{
+  margin:0;
+  padding:0;
+}
+.social li{
+  list-style:none;
+  display:inline;
+  font-size:1.5em;
+  margin-right:10px;
+}
+.social li a{
+  color:#69c;
+}
+footer small{
+  color:#fff;
+  margin-left:25em;
+}
+footer:after{
+  background-position:center center;
+  background-repeat:repeat;
+  background-color:rgba(64,86,143, .8);
+  width:100%;
+  height:100%;
+  position:absolute;
+  top:0;
+  z-index:1;
+  content:'';
 }
