--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -55,6 +55,16 @@ aside > .fa{
 #about{
   margin-left:70px;
   margin-top:100px;
+  margin-right:70px;
+  margin-bottom:150px;
+}
+#about > h5{
+  text-align:center;
+}
+.team{
+  float:left;
+  border-radius:20px;
+  margin-right:10px;
 }
 footer{
   width:100%;
@@ -63,7 +73,7 @@ footer{
   background-position:center center;
   background-repeat:no-repeat;
   background-size:cover;
-  position:absolute;
+  position:relative;
   bottom:0;
   padding-top:20px;
   margin-top:0;
